--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
         </div>
 
         <div class="col-sm-4">
-          <p>History has always been my strong-suit, Ive never made less than a 85 in my history classes (expect this year I hate US history). I mean history is so interesting to me you can watch kingdoms rise and fall over thousands of years, and also see so many different faces and how they impacted the world. And one of the ways I get to see history throughout the world is because I'm a certified diver. Ive been on 13 to 14 dives. I have been diving in these country's Mexico, Costa Rica, Aruba, Dominican Republic, and well technically it was Mexican water's but I was in Calf. I also have help my dad work on the truck ill be getting once I get my license. And last I love the shoot my guns, and make fire in the backyard. But I spend most of my time inside but of ps4 and pc.</p>
+          <p>History has always been my strong-suit, Ive never made less than a 85 in my history classes (expect this year I hate US history). I mean history is so interesting to me you can watch kingdoms rise and fall over thousands of years, and also see so many different faces and how they impacted the world. And one of the ways I get to see history throughout the world is because I'm a certified diver. Ive been on 13 to 14 dives. I have been diving in these country's Mexico, Costa Rica, Aruba, Dominican Republic, and well technically it was Mexican water's but I was in Calf. I also have help my dad work on the truck ill be getting once I get my license. And last I love the shoot my guns, and make fire in the backyard. But I spend most of my time inside but of ps4 and pc.
+
+          Here are links to my other websites. 
+
+          https://ethanpate.github.io/project-woof1/</p>
           <style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/1UztmbNT0cE' frameborder='0' allowfullscreen></iframe></div>
         </div>
         
@@ -69,5 +73,6 @@
     <script src="js/helper.js"></script>
   </body>
 </html>
+
 
 
